# syncat

./: CMakeLists.txt  main.cpp
